--- a/style.css
+++ b/style.css
@@ -657,6 +657,7 @@ body {
         align-items: center;
         flex-direction: column;
         padding-top: 60px;
+        margin-left: 5%;
     }
     
     .whoami-2 h1 {
